terraform/island-of-intelligence.tf
resource "google_compute_instance" "island-of-intelligence" {
  name         = "island-of-intelligence"
  machine_type = "e2-medium"

  boot_disk {
    initialize_params {
      image = "ubuntu-os-cloud/ubuntu-1804-lts"
      size  = 25
      type  = "pd-ssd"
    }
  }

  tags = ["ioi", "proxy"]

  network_interface {
    subnetwork = google_compute_subnetwork.neverland-gcn-subnetwork.id
    access_config {
    }
  }
  metadata = {
    ssh-keys = "spyman:${file("../sensitive_data/spyman.pub")}"
  }
}

output "island-of-intelligence-IP" {
  value = google_compute_instance.island-of-intelligence.network_interface.0.access_config.0.nat_ip
}

/* Ansible variables */
resource "local_file" "tf_island-of-intelligence_vars_file_new" {
  content  = <<-DOC
    # Ansible vars_file containing variable values from Terraform.
    # Generated by Terraform mgmt configuration.
    ioi_external_ip: ${google_compute_instance.island-of-intelligence.network_interface.0.access_config.0.nat_ip}
    ioi_internal_ip: ${google_compute_instance.island-of-intelligence.network_interface.0.network_ip}
    tinyproxy_port: ${var.tinyproxy_port}
    DOC
  filename = "../ansible/terraform_variables/tf_island-of-intelligence_vars_file.yml"
}
